--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "5.3.3",
+    "react-mapbox-gl": "^5.1.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.2"
+    "react-transition-group": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
