Add functionality to view the map of a certain place

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "mini-css-extract-plugin": "^0.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-mapbox-gl": "^5.1.1",
@@ -30,5 +31,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
